{{$NEXT}}

0.81     2013-04-02

- Fixes to pass tests with DateTime 1.00.


0.80     2010-03-14

- Remove the 00sig.t test, which seemed to cause random failures based on CPAN
  testers reports.

- Lots of cleanup in test code.

- Future releases will all increment by 0.01 (0.81, 0.82, etc).

- No code changes.


0.7901   2007-09-01

- The memory-cycle.t test will fail if you have PadWalker and the
  current Devel::Cycle (1.07) installed. I forgot I had patched my
  local Devel::Cycle to fix this bug.


0.79     2007-08-30

- Fix several circular references in
  DateTime::Format::Builder::Parser. This would be triggered by any
  standard usage of DT::F::Builder. Reported by Carl Franks. RT
  #29034.


0.7807   2006-05-29

- Fix a test failure in on_fail_regex.t on Win32 (bug in the test code).
  Reported by Ben Thul.


0.7806   2004-09-09

- When DateTime::Format::Builder::Parser loaded worker classes, it
  ignored modules located under relative paths. This was fixed by using
  Class::Factory::Util for this functionality instead.


0.7805   2004-11-08

- DateTime::Format::Build::Parser caused an exception when run in taint
  mode. Reported by Curtis Hawthorne.


0.7805   2004-11-08

- DateTime::Format::Build::Parser caused an exception when run in taint
  mode. Reported by Curtis Hawthorne.


0.7804   2004-07-07

- No code or doc changes, just change the code in examples to ensure
  that PAUSE does not index it.


0.7803   2004-02-13

- Localize $_ before calling File::Find, otherwise it will be written
  over for caller. Patch from Leon Brocard.


0.7802   2004-02-13

- Add dependency on DateTime::Format::Strptime.


0.7801   2004-01-26

- New maintainer - Dave Rolsky

- Switched to a different build/install sysstem (Module::Build instead
  of Module::Install)


0.78     2003-12-01

- Fix multigroup bug in Dispatch

- Add Tivoli example.


0.77     2003-08-14

- Correct package name for Quick.

- Augment license conditions.
