@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Removed use of Class::Factory::Util. That distro is poorly maintained (by
+  me) and it has some issues with its use of Module::Build. This distro
+  (DateTime-Format-Builder) really doesn't need to use Class::Factory::Util.
+
+
 0.81     2013-04-02
 
 - Fixes to pass tests with DateTime 1.00.
